--- a/index.html
+++ b/index.html
@@ -52,40 +52,44 @@
     <section class="about-us container">
       <div class="sectionWraper">
         <div class="sectionMainWrapper">
-          <img src="img/Rectangle.png" alt="BckGroundImg" class="Rectangle20" />
           <div class="textUpImage">
             <h4>30% OFF</h4>
             <h2><div class="changeText1">FOR WOMEN</div></h2>
           </div>
-          <img src="img/section1.png" alt="ImgSection1" />
+          <img
+            src="img/category1_3.png"
+            alt="ImgSection1"
+            class="ImgCategory"
+          />
         </div>
         <div class="sectionMainWrapper">
-          <img src="img/Rectangle.png" alt="BckGroundImg" class="Rectangle20" />
           <div class="textUpImage">
             <h4>HOT DEAL</h4>
             <h2><div class="changeText1">FOR MEN</div></h2>
           </div>
-          <img src="img/section2.png" alt="ImgSection2" />
+          <img
+            src="img/category2_3.jpg"
+            alt="ImgSection2"
+            class="ImgCategory"
+          />
         </div>
         <div class="sectionMainWrapper">
-          <img src="img/Rectangle.png" alt="BckGroundImg" class="Rectangle20" />
           <div class="textUpImage">
             <h4>NEW ARRIVALS</h4>
             <h2><div class="changeText1">FOR KIDS</div></h2>
           </div>
-          <img src="img/section3.png" alt="ImgSection3" />
+          <img
+            src="img/category3_3.jpg"
+            alt="ImgSection3"
+            class="ImgCategory"
+          />
         </div>
         <div class="sectionMainWrapper bigImgSection">
-          <img
-            src="img/RectangleBig.png"
-            alt="BckGroundImgBig"
-            class="Rectangle20 Rectangle20_2"
-          />
           <div class="textUpImageBig">
             <h4>LUXIROUS & TRENDY</h4>
             <h2><div class="changeText1">ACCESORIES</div></h2>
           </div>
-          <img src="img/section4.png" alt="ImgSection4" class="" />
+          <img src="img/category4.jpg" alt="ImgSection4" class="ImgCategory" />
         </div>
       </div>
       <div class="sectionMain2">
