--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
     </header>
     <main>
       <div class="header-content container">
-        <img src="img/main_img_2.png" alt="mainImg1" class="mainImg1" />
+        <img
+          src="img/Layer_57-removebg-preview 1.svg"
+          alt="mainImg1"
+          class="mainImg1"
+        />
         <div>
           <div class="boxTextMain2">
             <img src="img/Rectangle_2.png" alt="RectangleMain2" />
@@ -89,7 +93,8 @@
             <h4>LUXIROUS & TRENDY</h4>
             <h2><div class="changeText1">ACCESORIES</div></h2>
           </div>
-          <img src="img/category4.jpg" alt="ImgSection4" class="ImgCategory" />
+          <img src="img/category4.jpg" alt="ImgSection4" class="ImgCategory1" />
+          <img src="img/kategory4.jpg" alt="ImgSection4" class="ImgCategory2" />
         </div>
       </div>
       <div class="sectionMain2">
