--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <h5 class="menu-text">WOMAN</h5>
               <ul class="menu-list">
                 <li><a href="#">Accessories</a></li>
-                <li><a href="#">Jackets & Coats</a></li>
+                <li><a href="#">Jackets &amp;&nbsp;Coats</a></li>
                 <li><a href="#">Polos</a></li>
                 <li><a href="#">T-Shirts</a></li>
                 <li><a href="#">Shirts</a></li>
@@ -108,7 +108,7 @@
               <h5 class="menu-text">KIDS</h5>
               <ul class="menu-list">
                 <li><a href="#">Accessories</a></li>
-                <li><a href="#">Jackets & Coats</a></li>
+                <li><a href="#">Jackets &amp;&nbsp;Coats</a></li>
                 <li><a href="#">Polos</a></li>
                 <li><a href="#">T-Shirts</a></li>
                 <li><a href="#">Shirts</a></li>
@@ -156,7 +156,7 @@
         </div>
         <div class="sectionMainWrapper bigImgSection">
           <div class="textUpImageBig">
-            <h4>LUXIROUS & TRENDY</h4>
+            <h4>LUXIROUS &amp;&nbsp;TRENDY</h4>
             <h2><div class="changeText1">ACCESORIES</div></h2>
           </div>
           <img src="img/category4.jpg" alt="ImgSection4" class="ImgCategory1" />
@@ -307,7 +307,7 @@
         </div>
         <div class="delivery__card">
           <img src="img/Sales.svg" alt="Sales" />
-          <h3>Sales & discounts</h3>
+          <h3>Sales &amp;&nbsp;discounts</h3>
           <p>
             Worldwide delivery on all. Authorit tively morph
             <br />next-generation innov tion with extensive models.
